This should fix the layout jumping

--- a/app/style/main.css
+++ b/app/style/main.css
@@ -19,6 +19,10 @@ html {
     box-sizing: border-box;
 }
 
+.blocklyWidgetDiv {
+    position: fixed;
+}
+
 .blocklyWidgetDiv .goog-menu {
     border-radius: 4px !important;
     border: 0px;
